Revision de pares-openapi
