# openapi.yaml
@@ -11,9 +11,11 @@ tags:
   - name: health
     description : 'Permite comprobar el funcionamiento del servicio'
   - name: order
-    description: 'Permite gestionar órdenes de pago'
-  - name: webhook
-    description: 'Permite actualizar estados de órdenes de pago'
+    description: 'Permite gestionar órdenes de pago '
+  - name: notify
+    description: 'Permite notificar pago en Santander'
+  - name: redirect
+    description: 'Permite notificar pago en Santander'  
   - name: refund
     description: 'Permite gestionar los reembolsos de las órdenes de pago'
 paths:
@@ -55,62 +57,75 @@ paths:
           $ref: '#/components/responses/BusinessError'
         '500':
           $ref: '#/components/responses/InternalServer'
-  /api/v1/order/{id}/notify:
+  /api/v1/santander/notify:
     post:
       tags:
-        - webhook
+        - notify
       summary: Notificación de pago consolidado
       description: Recibe una notificación cuando el pago se ha realizado en Santander
-      parameters:
-        - name: id
-          in: path
-          description: UUID de la orden en servicio integración Santander
-          required: true
-          schema:
-            type: string
-            example: 46c9d190-a244-4e2d-8c44-baf74ec90528
-          style: simple
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/WebhookNotifyRequest'
+              $ref: '#/components/schemas/NotifyRequest'
       responses:
         '200':
-          description: Ok
-        '400':
-          $ref: '#/components/responses/BusinessError'
-        '404':
-          $ref: '#/components/responses/NotFound'
+          description: Objeto Order
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotifyResponse'
         '500':
           $ref: '#/components/responses/InternalServer'
-  /api/v1/order/{id}/cancel:
+  /api/v1/santander/redirect:
     get:
       tags:
-        - webhook
-      summary: Notificación de pago anulado
-      description: Recibe una notificación cuando el pagador abandona el pago
+        - redirect
+      summary: Notificación de pago consolidado
+      description: Recibe una notificación cuando el pago se ha realizado en Santander
       parameters:
-        - name: id
+        - name: IdCarro
           in: path
-          description: UUID de la orden en servicio integración Santander
+          description: Identificador del Carro
+          required: true
+          schema:
+            type: integer
+            example: 169402
+        - name: CodRet 
+          in: path
+          description: Codigo de Retorno (000=Pago aceptado por el banco, 001=Error en operación, 002=Pago pendiente de firma)
           required: true
           schema:
             type: string
-            example: 46c9d190-a244-4e2d-8c44-baf74ec90528
-          style: simple
+            example: 000
+        - name: Estado 
+          in: path
+          description: Estado del pago
+          required: true
+          schema:
+            type: string
+            example: "ACEPTADO" 
+        - name: mpfin
+          in: path
+          description: Estructura XML MPFIN
+          required: true
+          schema:
+            type: string
+            example: <MPFIN><IDTRX>000100</IDTRX><CODRET></CODRET><NROPAGOS></NROPAGOS><TOTAL>1199</TOTAL><INDPAGO></INDPAGO><IDREG></IDREG></MPFIN>
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MpfinRequest'
       responses:
         '200':
           description: Url de retorno
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/WebhookCancelResponse'
-        '400':
-          $ref: '#/components/responses/BusinessError'
-        '404':
-          $ref: '#/components/responses/NotFound'
+                $ref: '#/components/schemas/MpfinResponse'
         '500':
           $ref: '#/components/responses/InternalServer'
   /api/v1/refund/create:
@@ -372,26 +387,104 @@ components:
           nullable: true
           items:
             $ref: '#/components/schemas/Metadata'
-    WebhookNotifyRequest:
+    NotifyRequest:
       type: object
       properties:
-        notification_token:
+        TX:
+          type: array
+          description: Array con campos de request
+        TX.CODRET:
+          type: number
+          maxLength: 4
+          description: Codigo retorno operación
+          example: 0000
+        TX.DESCRET:
           type: string
-          maxLength: 64
-          description: Token de notificación de la orden
-          example: '03c7dd5edc6bfed5a333282c89c581c27866ba3c2f12fe0f4912abbcf595aeae'
-        api_version:
+          maxLength: 200
+          description: Descripcion codigo retorno asociado a operación
+          example: 'OK'  
+        TX.IDCOM:
           type: string
-          maxLength: 5
-          description: Versión de la API de notificación
-          example: '1.3'
-    WebhookCancelResponse:
+          maxLength: 20
+          description: Identificador comercio
+          example: '5878'
+        TX.IDTRX:
+          type: number
+          maxLength: 20
+          description: Identificador comercio
+          example: 11736793152       
+        TX.TOTAL:
+          type: number
+          maxLength: 18
+          description: Monto pagado (Con máximo 2 decimales)
+          example: 27828.00  
+        TX.MONEDA:
+          type: string
+          maxLength: 3
+          description: Código moneda
+          example: '999' 
+        TX.NROPAGOS:
+          type: number
+          maxLength: 2
+          description: Número de items pagados
+          example: 2  
+        TX.FECHATRX:
+          type: string
+          maxLength: 2
+          description: Fecha y hora de pago (Formato DD/MM/YYYY HH:mm:ss)
+          example: '07/02/2024 11:32:20' 
+        TX.IDTRXREC:
+          type: string
+          maxLength: 20
+          description: Identificador de transacción entregado por el banco para la operación
+          example: '122336754'    
+    NotifyResponse:
       type: object
       properties:
-        return_url:
+        code:
           type: string
-          description: Url de retorno de orden
-          example: https://local.tuxidev.cl:9101/app/pgw/return.php?token=423E9D4A34B6D53E302DE1A4CAF908992931998Z
+          description: Código de retorno operación
+          example: "000"
+        dsc:
+          type: string
+          maxLength: 20
+          description: Descripción del código de retorno asociado a la operación
+          example: "Proceo exitoso"   
+    MpfinRequest:
+      type: object
+      properties:
+        IdCarro:
+          type: number
+          maxLength: 11
+          description: Identificador carro
+          example: 169485
+        CodRet:
+          type: string
+          maxLength: 3
+          description: Código de retorno
+          example: '000'  
+        Estado:
+          type: string
+          maxLength: 20
+          description: Estado del pago
+          example: 'ACEPTADO'
+        mpfin:
+          type: string
+          maxLength: 20
+          description: Estructura XML Mpfin
+          example: '<MPFIN><IDTRX>000100</IDTRX><CODRET></CODRET><NROPAGOS></NROPAGOS><TOTAL>1199</TOTAL><INDPAGO></INDPAGO><IDREG></IDREG></MPFIN>'                
+    MpfinResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          description: Información sobre recepción
+          example: "Recepción exitosa"
+        url_return:
+          type: string
+          maxLength: 256
+          description: Url de retorno
+          example: "https://flow.cl/retorno.php"  
     CreateRefundRequest:
       type: object
       properties:
